--- a/src/template/404.html
+++ b/src/template/404.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Error</title>
+    <title>404 Error</title>
 </head>
 <body>
-    <h1>页面出错了！</h1> 
-    <p>错误代码： {code}</p>
-    <p>错误消息： {msg}</p>
+    <h1>页面丢失了！</h1> 
 </body>
 </html>
